force-app/main/default/objects/Time_Sheet__c/Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Time Sheet</label>
    <nameField>
        <label>Time Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>