force-app/main/default/objects/Time_Sheet__c/fields/endtime__c.field-meta.xml
<CustomField>
    <fullName>endtime__c</fullName>
    <label>endtime</label>
    <type>DateTime</type>
</CustomField>