force-app/main/default/objects/Time_Sheet__c/fields/hours_worked__c.field-meta.xml
<CustomField>
    <fullName>hours_worked__c</fullName>
    <label>hours worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>