force-app/main/default/objects/Time_Sheet__c/fields/loc__c.field-meta.xml
<CustomField>
    <fullName>loc__c</fullName>
    <label>loc</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>