force-app/main/default/objects/Time_Sheet__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Time Sheets</relationshipLabel>
    <relationshipName>Master</relationshipName>
    <type>Lookup</type>
</CustomField>