force-app/main/default/objects/Time_Sheet__c/fields/start__c.field-meta.xml
<CustomField>
    <fullName>start__c</fullName>
    <label>start</label>
    <type>DateTime</type>
</CustomField>