force-app/main/default/objects/Time_Sheet__c/recordTypes/las.recordType-meta.xml
<RecordType>
    <fullName>las</fullName>
    <active>true</active>
    <label>las</label>
</RecordType>