force-app/main/default/objects/Time_Sheet__c/recordTypes/TBD.recordType-meta.xml
<RecordType>
    <fullName>TBD</fullName>
    <active>true</active>
    <label>TBD</label>
</RecordType>